@@ -2,7 +2,6 @@ package com.buschmais.jqassistant.neo4j.embedded;
 
 import java.util.Collection;
 
-import com.buschmais.jqassistant.neo4j.embedded.configuration.Embedded;
 import com.buschmais.xo.neo4j.embedded.impl.datastore.EmbeddedDatastore;
 
 /**
@@ -11,9 +10,7 @@ import com.buschmais.xo.neo4j.embedded.impl.datastore.EmbeddedDatastore;
  */
 public interface EmbeddedNeo4jServer {
 
-    String getVersion();
-
-    void initialize(EmbeddedDatastore embeddedDatastore, Embedded embedded, ClassLoader classLoader, Collection<Class<?>> procedureTypes,
+    void initialize(EmbeddedDatastore embeddedDatastore, String listenAddress, Integer httpPort, ClassLoader classLoader, Collection<Class<?>> procedureTypes,
         Collection<Class<?>> functionTypes);
 
     void start();
