@@ -1,12 +1,12 @@
-package com.buschmais.jqassistant.neo4j.embedded.neo4jv4;
+package com.buschmais.jqassistant.neo4j.embedded.impl;
 
 import java.net.InetSocketAddress;
 import java.util.Collection;
 
 import com.buschmais.jqassistant.neo4j.embedded.EmbeddedNeo4jServer;
-import com.buschmais.jqassistant.neo4j.embedded.configuration.Embedded;
 import com.buschmais.xo.neo4j.embedded.impl.datastore.EmbeddedDatastore;
 
+import lombok.extern.slf4j.Slf4j;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.handler.HandlerCollection;
 import org.eclipse.jetty.util.resource.Resource;
@@ -20,34 +20,32 @@ import org.neo4j.kernel.internal.GraphDatabaseAPI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-class Neo4jV4CommunityNeoServer implements EmbeddedNeo4jServer {
+@Slf4j
+class Neo4jCommunityNeoServer implements EmbeddedNeo4jServer {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(Neo4jV4CommunityNeoServer.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(Neo4jCommunityNeoServer.class);
     private EmbeddedDatastore embeddedDatastore;
-
-    private Embedded embedded;
 
     private ClassLoader classLoader;
 
     private Server server;
+    private String listenAddress;
+    private Integer httpPort;
 
     @Override
-    public String getVersion() {
-        return "4.x";
-    }
-
-    @Override
-    public final void initialize(EmbeddedDatastore embeddedDatastore, Embedded embedded, ClassLoader classLoader, Collection<Class<?>> procedureTypes,
+    public final void initialize(EmbeddedDatastore embeddedDatastore, String listenAddress, Integer httpPort, ClassLoader classLoader,
+        Collection<Class<?>> procedureTypes,
         Collection<Class<?>> functionTypes) {
         this.embeddedDatastore = embeddedDatastore;
-        this.embedded = embedded;
         this.classLoader = classLoader;
+        this.listenAddress = listenAddress;
+        this.httpPort = httpPort;
         registerProceduresAndFunctions(procedureTypes, functionTypes);
     }
 
     @Override
     public void start() {
-        this.server = new Server(new InetSocketAddress(embedded.listenAddress(), embedded.httpPort()));
+        this.server = new Server(new InetSocketAddress(listenAddress, httpPort));
         WebAppContext rootContext = getWebAppContext("/", "browser/");
         WebAppContext pluginContext = getWebAppContext("/jqassistant", "META-INF/jqassistant-static-content/");
         server.setHandler(new HandlerCollection(rootContext, pluginContext));
@@ -55,9 +53,9 @@ class Neo4jV4CommunityNeoServer implements EmbeddedNeo4jServer {
         try {
             server.start();
         } catch (Exception e) {
-            throw new RuntimeException("Cannot start embedded server.", e);
+            throw new IllegalStateException("Cannot start embedded server.", e);
         }
-        LOGGER.info("Neo4j browser available at http://{}:{}.", embedded.listenAddress(), embedded.httpPort());
+        LOGGER.info("Neo4j browser available at http://{}:{}.", listenAddress, httpPort);
     }
 
     private WebAppContext getWebAppContext(String contextPath, String resourceRoot) {
@@ -75,16 +73,24 @@ class Neo4jV4CommunityNeoServer implements EmbeddedNeo4jServer {
             try {
                 server.stop();
             } catch (Exception e) {
-                throw new RuntimeException("Cannot stop embedded server.", e);
+                throw new IllegalStateException("Cannot stop embedded server.", e);
             }
         }
     }
 
+    /**
+     * @deprecated Replaced by Neo4j plugins mechanism.
+     */
+    @Deprecated(forRemoval = true)
     private void registerProceduresAndFunctions(Collection<Class<?>> procedureTypes, Collection<Class<?>> functionTypes) {
         GraphDatabaseService graphDatabaseService = embeddedDatastore.getManagementService()
             .database(GraphDatabaseSettings.DEFAULT_DATABASE_NAME);
         GlobalProcedures procedures = ((GraphDatabaseAPI) graphDatabaseService).getDependencyResolver()
             .resolveDependency(GlobalProcedures.class, DependencyResolver.SelectionStrategy.SINGLE);
+        if (!procedureTypes.isEmpty() || !functionTypes.isEmpty()) {
+            log.warn(
+                "Explicit registration of Neo4j procedures and functions has been deprecated, please use the plugin mechanism provided by the embedded store.");
+        }
         for (Class<?> procedureType : procedureTypes) {
             try {
                 LOGGER.debug("Registering procedure class " + procedureType.getName());
